Add some page headers - try to fix multi adder on invoice add

--- a/clients.html
+++ b/clients.html
@@ -2,17 +2,13 @@
 layout: app
 title: Clients
 ---
-<div class="row">
-  <div class="col-sm-6">
-    <h1><span class="glyphicon glyphicon-user"></span> Clients</h1>
-  </div>
-  <div class="col-sm-6">
-    <div class="pull-right">
-      <a class="btn btn-success" data-toggle="modal" data-target="#add-client">
-        <span class="glyphicon glyphicon-plus-sign"></span>
-        Add a new client
-      </a>
-    </div>
+
+<div class="page-header clearfix">
+  <h1 class="pull-left"><span class="glyphicon glyphicon-user"></span> Clients</h1>
+  <a class="btn btn-success pull-right" data-toggle="modal" data-target="#add-client">
+    <span class="glyphicon glyphicon-plus-sign"></span>
+    Add a new client
+  </a>
 </div>
 
 <div class="table-responsive">
