--- a/stats.html
+++ b/stats.html
@@ -2,25 +2,20 @@
 layout: app
 title: Statistics
 ---
-<div class="row">
-  <div class="pull-right col-md-6 form-horizontal">
-    <label class="col-md-6">
+
+<div class="page-header clearfix">
+  <h1 class="pull-left"><span class="glyphicon glyphicon-stats"></span> Statistics</h1>
+  <div class="form-inline pull-right">
+    <label>
       Current time period
     </label>
-    <div class="col-md-6">
-      <select class="form-control">
-        <option selected="true">2014</option>
-        <option>2013</option>
-        <option>2012</option>
-      </select>
-    </div>
+    <select class="form-control">
+      <option selected="true">2014</option>
+      <option>2013</option>
+      <option>2012</option>
+    </select>
   </div>
-  <div class="col-md-6">
-    <h1><span class="glyphicon glyphicon-stats"></span> Statistics</h1>
-  </div>
-
 </div>
-
 
 <div class="panel panel-default">
   <div class="panel-heading">
