--- a/add-invoice.html
+++ b/add-invoice.html
@@ -3,21 +3,21 @@ layout: app
 title: Add invoice
 ---
 
-<div class="row">
-  <div class="col-md-6">
-    <h1><span class="glyphicon glyphicon-file"></span> Add invoice</h1>
-  </div>
-  <div class="col-md-6">
-    <div class="pull-right">
-      <div class="form-inline">
-          <label>
-            <input type="checkbox" checked>
-            Use standard rate
-          </label>
-          <label>
-            <input type="checkbox" checked>
-            Use default payment terms
-          </label>
+<div class="page-header clearfix">
+  <h1 class="pull-left"><span class="glyphicon glyphicon-file"></span> Add invoice</h1>
+  <div class="pull-right">
+    <div class="form-inline">
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" checked>
+          Use standard rate
+        </label>
+      </div>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" checked>
+          Use default payment terms
+        </label>
       </div>
     </div>
   </div>
@@ -41,7 +41,7 @@ title: Add invoice
           </select>
           <p class="help-block">
             <a class="btn btn-link" data-toggle="modal" data-target="#add-client">
-              <span class="glyphicon glyphicon-plus"></span>
+              <span class="glyphicon glyphicon-plus-sign"></span>
               Add a new client
             </a>
           </p>
@@ -52,10 +52,6 @@ title: Add invoice
 
   </div> <!-- end panel body -->
 </div> <!-- end panel -->
-
-
-
-
 
 
 <div class="panel panel-default" data-toggle-group="true">
@@ -72,58 +68,51 @@ title: Add invoice
 
   </div>
   <div class="panel-body">
+
     <!-- FIXED -->
-    <form class="form-horizontal hide" role="form" data-toggle-group-element="rate-fixed">
+    <form class="form-horizontal multi-adder hide" role="form" data-toggle-group-element="rate-fixed">
 
-      <div class="multi-adder">
-        <!-- this only exists to work with the multi adder markup pattern -->
-        <div class="form-group">
-          <div class="col-sm-6">
-            <a href="#" class="btn btn-success multi-add">Add row</a>
-          </div>
+      <!-- this only exists to work with the multi adder markup pattern -->
+      <a href="#" class="btn btn-success multi-add"><span class="glyphicon glyphicon-plus-sign"></span> Add row</a>
+
+      <div class="row">
+        <div class="col-sm-9">
+          <b>Description</b>
         </div>
-
-        <div class="form-group row">
-          <div class="col-sm-9">
-            <b>Description</b>
-          </div>
-          <div class="col-sm-3">
-            <b>Price</b>
-          </div>
+        <div class="col-sm-3">
+          <b>Price</b>
         </div>
+      </div>
 
-        <div class="form-group">
-          <div class="col-sm-9">
+      <div class="form-group">
+        <div class="col-sm-9">
+          <input class="form-control" type="text">
+        </div>
+        <div class="col-sm-3">
+          <div class="input-group">
+            <span class="input-group-addon">€</span>
             <input class="form-control" type="text">
           </div>
-          <div class="col-sm-3">
-            <div class="input-group">
-              <span class="input-group-addon">€</span>
+        </div>
+        <hr>
+      </div> <!-- end form group -->
+
+      <div class="multi-adder-row-holder hide">
+        <div class="multi-adder-row">
+          <div class="form-group">
+            <div class="col-sm-9">
               <input class="form-control" type="text">
             </div>
-          </div>
-          <hr>
-        </div> <!-- end form group -->
-
-
-        <div class="multi-adder-row-holder hide">
-          <div class="multi-adder-row">
-            <div class="form-group">
-              <div class="col-sm-9">
+            <div class="col-sm-3">
+              <div class="input-group">
+                <span class="input-group-addon">€</span>
                 <input class="form-control" type="text">
               </div>
-              <div class="col-sm-3">
-                <div class="input-group">
-                  <span class="input-group-addon">€</span>
-                  <input class="form-control" type="text">
-                </div>
-              </div>
-              <hr>
-            </div> <!-- end form group -->
-          </div>
+            </div>
+            <hr>
+          </div> <!-- end form group -->
         </div>
-
-      </div> <!-- end multi-adder -->
+      </div>
 
       <div class="row">
         <div class="col-sm-4 pull-right">
@@ -136,79 +125,69 @@ title: Add invoice
             <div class="col-sm-6">€252</div>
           </div>
           <hr />
-          <div class="trailer clearfix"><b>
-            <div class="col-sm-6">Total:</div>
-            <div class="col-sm-6">€1452</div>
-          </b></div>
-
+          <div class="trailer clearfix">
+            <b>
+              <div class="col-sm-6">Total:</div>
+              <div class="col-sm-6">€1452</div>
+            </b>
+          </div>
         </div>
       </div>
-
-
 
     </form>
 
     <!-- HOURLY -->
-    <form class="form-horizontal" role="form" data-toggle-group-element="rate-hourly">
+    <form class="form-horizontal multi-adder" role="form" data-toggle-group-element="rate-hourly">
 
-      <div class="multi-adder">
-        <!-- this only exists to work with the multi adder markup pattern -->
-        <div class="form-group">
-          <div class="col-sm-6">
-            <a href="#" class="btn btn-success multi-add">Add row</a>
-          </div>
+      <a href="#" class="btn btn-success multi-add"><span class="glyphicon glyphicon-plus-sign"></span> Add row</a>
+
+      <div class="row">
+        <div class="col-sm-6">
+          <b>Description</b>
         </div>
-
-        <div class="form-group row">
-          <div class="col-sm-6">
-            <b>Description</b>
-          </div>
-          <div class="col-sm-3">
-            <b>Hours</b>
-          </div>
-          <div class="col-sm-3">
-            <b>Price</b>
-          </div>
+        <div class="col-sm-3">
+          <b>Hours</b>
         </div>
+        <div class="col-sm-3">
+          <b>Price</b>
+        </div>
+      </div>
 
-        <div class="form-group">
-          <div class="col-sm-6">
+      <div class="form-group">
+        <div class="col-sm-6">
+          <input class="form-control" type="text">
+        </div>
+        <div class="col-sm-3">
+          <input class="form-control" type="text">
+        </div>
+        <div class="col-sm-3">
+          <div class="input-group">
+            <span class="input-group-addon">€</span>
             <input class="form-control" type="text">
           </div>
-          <div class="col-sm-3">
-            <input class="form-control" type="text">
-          </div>
-          <div class="col-sm-3">
-            <div class="input-group">
-              <span class="input-group-addon">€</span>
+        </div>
+        <hr>
+      </div> <!-- end form group -->
+
+      <div class="multi-adder-row-holder hide">
+        <div class="multi-adder-row">
+          <div class="form-group">
+            <div class="col-sm-6">
               <input class="form-control" type="text">
             </div>
-          </div>
-          <hr>
-        </div> <!-- end form group -->
-
-
-        <div class="multi-adder-row-holder hide">
-          <div class="multi-adder-row">
-            <div class="form-group">
-              <div class="col-sm-6">
+            <div class="col-sm-3">
+              <input class="form-control" type="text">
+            </div>
+            <div class="col-sm-3">
+              <div class="input-group">
+                <span class="input-group-addon">€</span>
                 <input class="form-control" type="text">
               </div>
-              <div class="col-sm-3">
-                <input class="form-control" type="text">
-              </div>
-              <div class="col-sm-3">
-                <div class="input-group">
-                  <span class="input-group-addon">€</span>
-                  <input class="form-control" type="text">
-                </div>
-              </div>
-              <hr>
-            </div> <!-- end form group -->
-          </div>
+            </div>
+            <hr>
+          </div> <!-- end form group -->
         </div>
-
-      </div> <!-- end multi-adder -->
+      </div>
 
       <div class="row">
         <div class="col-sm-4 pull-right">
