--- a/invoices.html
+++ b/invoices.html
@@ -3,6 +3,10 @@ layout: app
 title: Invoices
 ---
 
+<div class="page-header">
+  <h1><span class="glyphicon glyphicon-file"></span> Your invoices</h1>
+</div>
+
 <div class="row">
   <div class="col-sm-6">
     <div class="panel panel-default">
