--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,9 @@ layout: app
 title: Settings
 ---
 
-<h1><span class="glyphicon glyphicon-cog"></span> Settings</h1>
+<div class="page-header">
+  <h1><span class="glyphicon glyphicon-cog"></span> Settings</h1>
+</div>
 
 <div class="panel panel-default">
   <div class="panel-heading">
