--- a/user-settings.html
+++ b/user-settings.html
@@ -3,7 +3,9 @@ layout: app
 title: User settings
 ---
 
-<h1><span class="glyphicon glyphicon-user"></span> User settings</h1>
+<div class="page-header">
+  <h1><span class="glyphicon glyphicon-user"></span> User settings</h1>
+</div>
 
 <div class="panel panel-default">
   <div class="panel-heading">
