--- a/settings.html
+++ b/settings.html
@@ -30,7 +30,7 @@ title: Settings
       <div class="form-group">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Save</button>
         </div>
       </div>
 
@@ -95,7 +95,7 @@ title: Settings
       <div class="form-group">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Save</button>
         </div>
       </div>
 
