--- a/clients.html
+++ b/clients.html
@@ -5,7 +5,7 @@ title: Clients
 
 <div class="page-header clearfix">
   <h1 class="pull-left"><span class="glyphicon glyphicon-user"></span> Clients</h1>
-  <a class="btn btn-success pull-right" data-toggle="modal" data-target="#add-client">
+  <a class="btn btn-success pull-right" href="add-client.html">
     <span class="glyphicon glyphicon-plus-sign"></span>
     Add a new client
   </a>
