add invoice preview

--- a/add-invoice.html
+++ b/add-invoice.html
@@ -221,7 +221,7 @@ title: Add invoice
     <a href="/invoices.html" class="btn pull-left">Cancel</a>
 
     <div class="btn-toolbar pull-right" role="toolbar">
-      <a href="/invoices.html" class="btn btn-default">Preview</a>
+      <a href="/images/invoice.pdf" class="btn btn-default">Preview</a>
       <a class="btn btn-default" data-toggle="modal" data-target="#send-email">Send via e-mail</a>
       <a href="/invoices.html" class="btn btn-success">Save</a>
     </div>
