update edit/add invoice screen

--- a/add-invoice.html
+++ b/add-invoice.html
@@ -1,6 +1,7 @@
 ---
 layout: app
 title: Add invoice
+state: add-invoice
 ---
 
 <div class="page-header clearfix">
@@ -23,196 +24,9 @@ title: Add invoice
   </div>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Invoice to</h3>
-  </div>
-  <div class="panel-body">
-    <form class="form-horizontal" role="form">
 
-      <div class="form-group">
-        <label for="invoiceClient" class="col-sm-2 control-label">Client</label>
-        <div class="col-sm-10">
-          <select id="invoiceClient" class="form-control">
-            {% for client in site.data.clients %}
-              <option>{{client.company}}</option>
-              testqsdf
-            {% endfor %}
-          </select>
-          <p class="help-block">
-            <a class="btn btn-link" data-toggle="modal" data-target="#add-client">
-              <span class="glyphicon glyphicon-plus-sign"></span>
-              Add a new client
-            </a>
-          </p>
-        </div>
-      </div>
-
-    </form>
-
-  </div> <!-- end panel body -->
-</div> <!-- end panel -->
-
-
-<div class="panel panel-default" data-toggle-group="true">
-  <div class="panel-heading clearfix">
-
-    <div class="form-group pull-right">
-      <div class="btn-group">
-      <a href="#" class="btn btn-default active" data-toggle-group-trigger="rate-hourly">Hour based</a>
-      <a href="#" class="btn btn-default" data-toggle-group-trigger="rate-fixed">Fixed price</a>
-      </div>
-    </div>
-
-    <h3 class="panel-title">Items</h3>
-
-  </div>
-  <div class="panel-body">
-
-    <!-- FIXED -->
-    <form class="form-horizontal multi-adder hide" role="form" data-toggle-group-element="rate-fixed">
-
-      <!-- this only exists to work with the multi adder markup pattern -->
-      <a href="#" class="btn btn-success multi-add"><span class="glyphicon glyphicon-plus-sign"></span> Add row</a>
-
-      <div class="row">
-        <div class="col-sm-9">
-          <b>Description</b>
-        </div>
-        <div class="col-sm-3">
-          <b>Price</b>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-sm-9">
-          <input class="form-control" type="text">
-        </div>
-        <div class="col-sm-3">
-          <div class="input-group">
-            <span class="input-group-addon">€</span>
-            <input class="form-control" type="text">
-          </div>
-        </div>
-        <hr>
-      </div> <!-- end form group -->
-
-      <div class="multi-adder-row-holder hide">
-        <div class="multi-adder-row">
-          <div class="form-group">
-            <div class="col-sm-9">
-              <input class="form-control" type="text">
-            </div>
-            <div class="col-sm-3">
-              <div class="input-group">
-                <span class="input-group-addon">€</span>
-                <input class="form-control" type="text">
-              </div>
-            </div>
-            <hr>
-          </div> <!-- end form group -->
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4 pull-right">
-          <div class="trailer">
-            <div class="col-sm-6">Subtotal</div>
-            <div class="col-sm-6">€1200</div>
-          </div>
-          <div class="trailer clearfix">
-            <div class="col-sm-6">VAT total:</div>
-            <div class="col-sm-6">€252</div>
-          </div>
-          <hr />
-          <div class="trailer clearfix">
-            <b>
-              <div class="col-sm-6">Total:</div>
-              <div class="col-sm-6">€1452</div>
-            </b>
-          </div>
-        </div>
-      </div>
-
-    </form>
-
-    <!-- HOURLY -->
-    <form class="form-horizontal multi-adder" role="form" data-toggle-group-element="rate-hourly">
-
-      <a href="#" class="btn btn-success multi-add"><span class="glyphicon glyphicon-plus-sign"></span> Add row</a>
-
-      <div class="row">
-        <div class="col-sm-6">
-          <b>Description</b>
-        </div>
-        <div class="col-sm-3">
-          <b>Hours</b>
-        </div>
-        <div class="col-sm-3">
-          <b>Price</b>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <div class="col-sm-6">
-          <input class="form-control" type="text">
-        </div>
-        <div class="col-sm-3">
-          <input class="form-control" type="text">
-        </div>
-        <div class="col-sm-3">
-          <div class="input-group">
-            <span class="input-group-addon">€</span>
-            <input class="form-control" type="text">
-          </div>
-        </div>
-        <hr>
-      </div> <!-- end form group -->
-
-      <div class="multi-adder-row-holder hide">
-        <div class="multi-adder-row">
-          <div class="form-group">
-            <div class="col-sm-6">
-              <input class="form-control" type="text">
-            </div>
-            <div class="col-sm-3">
-              <input class="form-control" type="text">
-            </div>
-            <div class="col-sm-3">
-              <div class="input-group">
-                <span class="input-group-addon">€</span>
-                <input class="form-control" type="text">
-              </div>
-            </div>
-            <hr>
-          </div> <!-- end form group -->
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-4 pull-right">
-          <div class="trailer">
-            <div class="col-sm-6">Subtotal</div>
-            <div class="col-sm-6">€1200</div>
-          </div>
-          <div class="trailer clearfix">
-            <div class="col-sm-6">VAT total:</div>
-            <div class="col-sm-6">€252</div>
-          </div>
-          <hr />
-          <div class="trailer clearfix"><b>
-            <div class="col-sm-6">Total:</div>
-            <div class="col-sm-6">€1452</div>
-          </b></div>
-
-        </div>
-      </div>
-
-
-    </form>
-
-  </div> <!-- end panel body -->
-</div> <!-- end panel -->
+{% include forms/invoice-to.html %}
+{% include forms/invoice-content.html %}
 
 
 
