--- a/invoices.html
+++ b/invoices.html
@@ -47,7 +47,7 @@ title: Invoices
     <h3 class="panel-title">Invoices to be paid</h3>
   </div>
   <div class="panel-body">
-    
+
     <div class="table-responsive">
       <table class="table table-striped table-condensed table-responsive">
         <thead>
@@ -131,7 +131,7 @@ title: Invoices
             <td>€210</td>
             <td>In 5 days</td>
             <td>
-              <a href="#" class="btn btn-default btn-xs">Edit</a>
+              <a href="edit-invoice.html" class="btn btn-default btn-xs">Edit</a>
               <a href="#" class="btn btn-default btn-xs">Delete</a>
             </td>
           </tr>
@@ -230,7 +230,7 @@ title: Invoices
             <td>€210</td>
             <td>OK</td>
             <td>
-              <a href="#" class="btn btn-default btn-xs">Edit</a>
+              <a href="edit-invoice.html" class="btn btn-default btn-xs">Edit</a>
               <a href="#" class="btn btn-default btn-xs">Delete</a>
             </td>
           </tr>
@@ -238,7 +238,7 @@ title: Invoices
         </tbody>
       </table>
     </div><!-- end responsive table -->
-    
+
     <ul class="pagination">
       <li><a href="#">&laquo;</a></li>
       <li class="active"><a href="#">1</a></li>
