fix submit on edit invoice

--- a/edit-invoice.html
+++ b/edit-invoice.html
@@ -27,3 +27,4 @@ state: edit
 
 {% include forms/invoice-to.html %}
 {% include forms/invoice-content.html %}
+{% include forms/invoice-submit.html %}
