--- a/add-invoice.html
+++ b/add-invoice.html
@@ -27,18 +27,4 @@ state: add-invoice
 
 {% include forms/invoice-to.html %}
 {% include forms/invoice-content.html %}
-
-
-
-<div class="panel panel-default">
-  <div class="panel-body">
-    <a href="/invoices.html" class="btn pull-left">Cancel</a>
-
-    <div class="btn-toolbar pull-right" role="toolbar">
-      <a href="/images/invoice.pdf" target="_blank" class="btn btn-default">Preview</a>
-      <a class="btn btn-default" data-toggle="modal" data-target="#send-email">Send via e-mail</a>
-      <a href="/invoices.html" class="btn btn-success">Save</a>
-    </div>
-
-  </div>
-</div> <!-- end panel -->
+{% include forms/invoice-submit.html %}
