--- a/invoices.html
+++ b/invoices.html
@@ -16,6 +16,7 @@ title: Invoices
           <option>2014</option>
           <option>2013</option>
           <option>2012</option>
+          <option>Custom…</option>
         </select>
       </div>
     </div>
@@ -28,11 +29,11 @@ title: Invoices
         <div class="row">
           <div class="col-xs-6">
             <p>Outstanding</p>
-            <h2>€2400</h2>
+            <h2 class="m0">€2400</h2>
           </div>
           <div class="col-xs-6">
             <p>Paid since 01/01/2014</p>
-            <h2>€5845</h2>
+            <h2 class="m0">€5845</h2>
           </div>
         </div>
 
@@ -49,7 +50,7 @@ title: Invoices
   <div class="panel-body">
 
     <div class="table-responsive">
-      <table class="table table-striped table-condensed table-responsive">
+      <table class="table table-striped table-condensed table-responsive m0">
         <thead>
           <tr>
             <th>
@@ -239,7 +240,7 @@ title: Invoices
       </table>
     </div><!-- end responsive table -->
 
-    <ul class="pagination">
+    <ul class="pagination m0">
       <li><a href="#">&laquo;</a></li>
       <li class="active"><a href="#">1</a></li>
       <li><a href="#">2</a></li>
