update style guide colors

--- a/styleguide.html
+++ b/styleguide.html
@@ -53,31 +53,39 @@ bodyclass: styleguide
           </tr>
         </table>
 
-        <h3>Grays</h3>
+        <h3>Brand colors</h3>
         <div class="colors">
             <div>
-                <div class="color-example" style="background: #5cb85c;"></div>
-                <p>$brand-success: #5cb85c</p>
+                <div class="color-example" style="background: #068BC6;"></div>
+                <p>$brand-primary: #068BC6</p>
             </div>
             <div>
-                <div class="color-example" style="background: #d9534f;"></div>
-                <p>$brand-danger: #d9534f</p>
+                <div class="color-example" style="background: #00688C;"></div>
+                <p>$brand-secondary: #00688C</p>
             </div>
             <div>
-                <div class="color-example" style="background: #428bca;"></div>
-                <p>$brand-primary: #428bca</p>
+                <div class="color-example" style="background: #6CE0FF;"></div>
+                <p>$brand-tertiary: #6CE0FF</p>
             </div>
             <div>
-                <div class="color-example" style="background: #f0ad4e;"></div>
-                <p>$brand-warning: #f0ad4e</p>
+                <div class="color-example" style="background: #05AA8B;"></div>
+                <p>$brand-success: #05AA8B</p>
             </div>
             <div>
-                <div class="color-example" style="background: #5bc0de;"></div>
-                <p>$brand-info: #5bc0de</p>
+                <div class="color-example" style="background: #B70071;"></div>
+                <p>$brand-danger: #B70071</p>
+            </div>
+            <div>
+                <div class="color-example" style="background: #00688C;"></div>
+                <p>$brand-warning: #00688C</p>
+            </div>
+            <div>
+                <div class="color-example" style="background: #00688C;"></div>
+                <p>$brand-info: #00688C</p>
             </div>
         </div>
 
-        <h3>Brand colors</h3>
+        <h3>Grays</h3>
         <div class="colors">
           <div>
               <div class="color-example" style="background: #555;"></div>
