update occurences of btw to vat for consistency

--- a/invoices.html
+++ b/invoices.html
@@ -82,7 +82,7 @@ title: Invoices
             </th>
             <th>
               <a href="#" title="Sort ascending">
-                Value BTW in.
+                Value VAT in.
                 <span class="sortable">
                   <b class="caret"></b>
                   <b class="caret flipped"></b>
@@ -91,7 +91,7 @@ title: Invoices
             </th>
             <th>
               <a href="#" title="Sort ascending">
-                Value BTW ex.
+                Value VAT ex.
                 <span class="sortable">
                   <b class="caret"></b>
                   <b class="caret flipped"></b>
@@ -100,7 +100,7 @@ title: Invoices
             </th>
             <th>
               <a href="#" title="Sort ascending">
-                BTW
+                VAT
                 <span class="sortable">
                   <b class="caret"></b>
                   <b class="caret flipped"></b>
@@ -125,7 +125,7 @@ title: Invoices
             <td><a href="edit-invoice.html">Client name</td>
             <td>{% cycle '221', '220', '219', '218' %}</td>
             <td>
-              {% cycle '<span class="label label-default">Not paid</span>', '<span class="label label-danger">Late</span>' %}
+              {% cycle '<span class="label label-info">Not paid</span>', '<span class="label label-danger">Late</span>' %}
             </td>
             <td>€1210</td>
             <td>€1000</td>
@@ -183,7 +183,7 @@ title: Invoices
             </th>
             <th>
               <a href="#" title="Sort ascending">
-                Value BTW in.
+                Value VAT in.
                 <span class="sortable">
                   <b class="caret"></b>
                   <b class="caret flipped"></b>
@@ -192,7 +192,7 @@ title: Invoices
             </th>
             <th>
               <a href="#" title="Sort ascending">
-                Value BTW ex.
+                Value VAT ex.
                 <span class="sortable">
                   <b class="caret"></b>
                   <b class="caret flipped"></b>
@@ -201,7 +201,7 @@ title: Invoices
             </th>
             <th>
               <a href="#" title="Sort ascending">
-                BTW
+                VAT
                 <span class="sortable">
                   <b class="caret"></b>
                   <b class="caret flipped"></b>
