--- a/styleguide.html
+++ b/styleguide.html
@@ -27,6 +27,7 @@ bodyclass: styleguide
     <a class="list-group-item" href="#component-breadcrumbs">Breadcrumbs</a></li>
 
     <h4>Custom elements</h4>
+    <a class="list-group-item" href="#component-customicons">Custom icons</a></li>
     <a class="list-group-item" href="#component-sortabletable">Sortable Table</a></li>
     <a class="list-group-item" href="#component-accounting">Accounting numbers</a></li>
   </div>
@@ -601,6 +602,32 @@ bodyclass: styleguide
   </div>
 
 </div>
+
+
+<div id="component-customicons" class="component">
+
+  <h2>Component: Custom icons (built with Grumpicon)</h2>
+
+  <table class="table table-horizontal">
+      <tr>
+          <th>CSS source file</th>
+          <td><code>/icons/grumpicon/*.css</code></td>
+      </tr>
+  </table>
+
+  <div class="sample">
+      <div class="style">
+          {% include patterns/custom/custom-icons.html %}
+      </div>
+      <div class="markup">
+{% highlight html %}
+{% include patterns/custom/custom-icons.html %}
+{% endhighlight %}
+      </div>
+  </div>
+
+</div>
+
 
 
 <div id="component-sortabletable" class="component">
