--- a/add-invoice.html
+++ b/add-invoice.html
@@ -5,7 +5,7 @@ state: add-invoice
 ---
 
 <div class="page-header clearfix">
-  <h1 class="pull-left"><span class="glyphicon glyphicon-file"></span> Add invoice</h1>
+  <h1 class="pull-left"><div class="icon-large icon-invoices"></div> Add invoice</h1>
   <div class="pull-right">
     <div class="form-inline">
       <div class="checkbox">
