--- a/invoices.html
+++ b/invoices.html
@@ -4,7 +4,7 @@ title: Invoices
 ---
 
 <div class="page-header">
-  <h1><span class="glyphicon glyphicon-file"></span> Your invoices</h1>
+  <h1><div class="icon-large icon-invoices"></div> Your invoices</h1>
 </div>
 
 <div class="row">
