--- a/stats.html
+++ b/stats.html
@@ -4,7 +4,7 @@ title: Statistics
 ---
 
 <div class="page-header clearfix">
-  <h1 class="pull-left"><span class="glyphicon glyphicon-stats"></span> Statistics</h1>
+  <h1 class="pull-left"><div class="icon-large icon-stats"></div> Statistics</h1>
   <div class="form-inline pull-right">
     <label>
       Current time period
