--- a/clients.html
+++ b/clients.html
@@ -4,7 +4,7 @@ title: Clients
 ---
 
 <div class="page-header clearfix">
-  <h1 class="pull-left"><span class="glyphicon glyphicon-user"></span> Clients</h1>
+  <h1 class="pull-left"><div class="icon-large icon-users"></div> Clients</h1>
   <a class="btn btn-success pull-right" href="add-client.html">
     <span class="glyphicon glyphicon-plus-sign"></span>
     Add a new client
