--- a/edit-invoice.html
+++ b/edit-invoice.html
@@ -5,7 +5,7 @@ state: edit
 ---
 
 <div class="page-header clearfix">
-  <h1 class="pull-left"><span class="glyphicon glyphicon-file"></span> Edit invoice 'Aztec Inc. Sales Prototype'</h1>
+  <h1 class="pull-left"><div class="icon-large icon-settings"></div> Edit invoice 'Aztec Inc. Sales Prototype'</h1>
   <div class="pull-right">
     <div class="form-inline">
       <div class="checkbox">
