--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@ title: Settings
 ---
 
 <div class="page-header">
-  <h1><span class="glyphicon glyphicon-cog"></span> Settings</h1>
+  <h1><div class="icon-large icon-settings"></div> Settings</h1>
 </div>
 
 <div class="panel panel-default">
