--- a/user-settings.html
+++ b/user-settings.html
@@ -4,7 +4,7 @@ title: User settings
 ---
 
 <div class="page-header">
-  <h1><span class="glyphicon glyphicon-user"></span> User settings</h1>
+  <h1><div class="icon-large icon-settings"></div> User settings</h1>
 </div>
 
 <div class="panel panel-default">
