--- a/user-settings.html
+++ b/user-settings.html
@@ -9,7 +9,7 @@ title: User settings
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Account info</h3>
+    <h3 class="panel-title">Your password</h3>
   </div>
   <div class="panel-body">
     <form class="form-horizontal" role="form">
@@ -36,17 +36,44 @@ title: User settings
       </div>
 
       <div class="form-group">
-        <label for="userName" class="col-sm-2 control-label">Username</label>
+        <div class="col-sm-2"></div>
         <div class="col-sm-10">
-          <input class="form-control" type="text" id="userName" value="john.doe">
+          <button type="submit" class="btn btn-default">Save</button>
         </div>
       </div>
 
+    </form>
+
+  </div> <!-- end panel body -->
+</div> <!-- end panel -->
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Basic info</h3>
+  </div>
+  <div class="panel-body">
+    <form class="form-horizontal" role="form">
+
+      <div class="form-group">
+        <label for="userName" class="col-sm-2 control-label">E-mail</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="email" id="userName" value="john.doe@mail.com">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="userName" class="col-sm-2 control-label">Display name</label>
+        <div class="col-sm-10">
+          <input class="form-control" type="text" id="userName" value="john.doe">
+          <p class="help-block">The name used throughout the app to identify you.</p>
+        </div>
+      </div>
 
       <div class="form-group">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default">Save</button>
         </div>
       </div>
 
