--- a/app-settings.html
+++ b/app-settings.html
@@ -23,6 +23,16 @@ title: Settings
         </div>
       </div>
 
+      <div class="form-group">
+        <label class="col-sm-2 control-label">
+          Logo
+          <abbr title="Required field">*</abbr>
+        </label>
+        <div class="col-sm-10">
+          <input class="form-control" type="file">
+        </div>
+      </div>
+
       {% include forms/address.html %}
       {% include forms/country.html %}
       {% include forms/vat.html %}
