--- a/styleguide.html
+++ b/styleguide.html
@@ -30,6 +30,7 @@ bodyclass: styleguide
     <a class="list-group-item" href="#component-customicons">Custom icons</a></li>
     <a class="list-group-item" href="#component-sortabletable">Sortable Table</a></li>
     <a class="list-group-item" href="#component-accounting">Accounting numbers</a></li>
+    <a class="list-group-item" href="#component-charts">Charts</a></li>
   </div>
   &nbsp;<!-- Just so our column stays in place -->
 </nav>
@@ -674,6 +675,33 @@ bodyclass: styleguide
       <div class="markup">
 {% highlight html %}
 {% include patterns/custom/account-numbers.html %}
+{% endhighlight %}
+      </div>
+  </div>
+
+</div>
+
+
+
+
+<div id="component-charts" class="component">
+
+  <h2>Component: Charts</h2>
+
+  <table class="table table-horizontal">
+      <tr>
+          <th>CSS source file</th>
+          <td><code>defined in javascript</code></td>
+      </tr>
+  </table>
+
+  <div class="sample">
+      <div class="style">
+          {% include patterns/custom/chart.html %}
+      </div>
+      <div class="markup">
+{% highlight html %}
+{% include patterns/custom/chart.html %}
 {% endhighlight %}
       </div>
   </div>
