update mobile and login

--- a/stats.html
+++ b/stats.html
@@ -13,6 +13,7 @@ title: Statistics
       <option selected="true">2014</option>
       <option>2013</option>
       <option>2012</option>
+      <option>All</option>
       <option>Custom…</option>
     </select>
   </div>
