--- a/invoices.html
+++ b/invoices.html
@@ -16,6 +16,7 @@ title: Invoices
           <option>2014</option>
           <option>2013</option>
           <option>2012</option>
+          <option>All</option>
           <option>Custom…</option>
         </select>
       </div>
