Better responsive menu --> new invoice button in content

--- a/invoices.html
+++ b/invoices.html
@@ -3,8 +3,9 @@ layout: app
 title: Invoices
 ---
 
-<div class="page-header">
-  <h1><div class="icon-large icon-invoices"></div> Your invoices</h1>
+<div class="page-header clearfix">
+  <h1 class="pull-left"><div class="icon-large icon-invoices"></div> Your invoices</h1>
+  <a href="/add-invoice.html" class="btn btn-success pull-right"><span class="glyphicon glyphicon-plus-sign"></span> Add invoice</a>
 </div>
 
 <div class="row">
