Make the stats page work with nvd3 through bower

--- a/stats.html
+++ b/stats.html
@@ -24,7 +24,7 @@ title: Statistics
     <h3 class="panel-title">Revenue month over month</h3>
   </div>
   <div class="panel-body">
-    <div id="chart-income-by-month" class="chart">
+    <div id="chart-revenue-month-over-month" class="chart">
       <svg></svg>
     </div>
   </div>
